envoy/envelope-session-demo/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: service_backend
                            timeout: 0s
                          typed_per_filter_config:
                            envoy.filters.http.stateful_session:
                              '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
                              stateful_session:
                                session_state:
                                  name: envoy.http.stateful_session.envelope
                                  typed_config:
                                    '@type': type.googleapis.com/envoy.extensions.http.stateful_session.envelope.v3.EnvelopeSessionState
                                    header:
                                      name: "x-session-id"
                http_filters:
                  - name: envoy.filters.http.stateful_session
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSession
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: service_backend
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend
                      port_value: 8000
